syntax = "proto3";

option csharp_namespace = "Crud";

package products;

service ProductsService {
    rpc GetAll(Empty) returns(Products);
    rpc GetById(ProductRowIdFilter) returns(Product);
    rpc Post(Product) returns(Product);
    rpc Put(Product) returns(Product);
    rpc Delete(ProductRowIdFilter) returns(Empty);
}

message Empty {}

message Product {
    int32 ProductId = 2;
    string ProductName = 3;
    string CategoryName = 4;
    string Manufacturer = 5;
    int32 Price = 6;
}

message ProductRowIdFilter {
    int32 productId = 1;
}

message Products {
    repeated Product items = 1;
}